# monip

./: CMakeLists.txt
lib/: 78m6610.c  CMakeLists.txt  serial.c
lib/include/: 78m6610.h  serial.h
tests/: CMakeLists.txt  serial.cpp  serial_data.txt  test_serial.cc
tests/gtest/: CMakeLists.txt.in  README.MD
